<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UnitConverterApp1</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="conversion_select">Select Conversion Type :</string>
    <string name="convert_from">Convert From :</string>
    <string name="convert_to">Convert To.... :</string>
    <string name="convert">Convert</string>
    <string name="reset">Reset</string>
    <string name="switch_unit">Switch</string>
    <string name="conversion_Prompt">Select Conversion Type</string>
    
    <string-array name="conversion_types">
        <item >Length</item>
        <item >Mass</item>
        <item >Time</item>
        <item >Temperature</item>
        <item >Power</item>
    </string-array>
    
    <string-array name="length_units">
        <item >Metre</item>
        <item >Foot</item>
        <item >Centi-Metre</item>
        <item >Inch</item>
    </string-array>
    
    <string-array name="mass_units">
        <item >Kilo-Gram</item>
        <item >Pound</item>
        <item >Gram</item>
    </string-array>
    
    <string-array name="time_units">
        <item >Second</item>
        <item >Minute</item>
        <item >Hour</item>
    </string-array>
    
    <string-array name="temperature_units">
        <item >Kelvin</item>
        <item >Celsius</item>
        <item >Farenheit</item>
    </string-array>
    
    <string-array name="power_units">
        <item >Watt</item>
        <item >Hourse-Power</item>
        <item >Kilo-Watt</item>
    </string-array>

</resources>